@@ -1,8 +1,10 @@
 package com.pragma.ms_traceability.infrastructure.out.mongodb.adapter;
 
+import com.mongodb.BasicDBObject;
 import com.pragma.ms_traceability.domain.model.Traceability;
 import com.pragma.ms_traceability.domain.spi.ITraceabilityPersistencePort;
 import com.pragma.ms_traceability.infrastructure.out.mongodb.document.TraceabilityDocument;
+import com.pragma.ms_traceability.infrastructure.out.mongodb.dto.EmployeeRankingDTO;
 import com.pragma.ms_traceability.infrastructure.out.mongodb.mapper.ITraceabilityDocumentMapper;
 import com.pragma.ms_traceability.infrastructure.out.mongodb.repository.ITraceabilityRepository;
 import lombok.RequiredArgsConstructor;
@@ -12,11 +14,18 @@ import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
+import org.springframework.data.mongodb.core.aggregation.*;
 import org.springframework.data.mongodb.core.query.Criteria;
 import org.springframework.data.mongodb.core.query.Query;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
+import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+
+import static org.springframework.data.mongodb.core.aggregation.Aggregation.*;
+
+
 
 @Component
 @RequiredArgsConstructor
@@ -65,7 +74,121 @@ public class TraceabilityMongoDbAdapter implements ITraceabilityPersistencePort 
 
         List<Traceability> traceabilityContent = documents.stream()
                 .map(traceabilityDocumentMapper::toModel)
-                .toList();
+                .collect(Collectors.toList());
         return new PageImpl<>(traceabilityContent, pageable, total);
     }
+
+    @Override
+    public List<EmployeeRankingDTO> getEmployeePerformanceRanking(int cantidadPedidos){
+        // 1️⃣ Match: solo PENDING y DELIVERED con employee
+        MatchOperation matchStates = match(
+                new Criteria().andOperator(
+                        Criteria.where("employee_id").exists(true),
+                        new Criteria().orOperator(
+                                Criteria.where("previous_state").is("PENDING"),
+                                Criteria.where("new_state").is("DELIVERED")
+                        )
+                )
+        );
+
+        // 2️⃣ Group por order + employee
+        GroupOperation groupByOrderAndEmployee = group(
+                Fields.from(
+                        Fields.field("orderId", "order_id"),
+                        Fields.field("employeeId", "employee_id")
+                )
+        )
+                .min(
+                        ConditionalOperators.when(Criteria.where("previous_state").is("PENDING"))
+                                .thenValueOf("date_previous_state")
+                                .otherwiseValueOf("$$REMOVE")
+                ).as("pendingDate")
+                .max(
+                        ConditionalOperators.when(Criteria.where("new_state").is("DELIVERED"))
+                                .thenValueOf("date_new_state")
+                                .otherwiseValueOf("$$REMOVE")
+                ).as("deliveredDate");
+
+        // 3️⃣ Match pedidos válidos
+        MatchOperation validOrders = match(
+                Criteria.where("pendingDate").ne(null)
+                        .and("deliveredDate").ne(null)
+        );
+
+        // 4️⃣ Project: calcular tiempo en minutos
+        ProjectionOperation calculateAttentionTime = project()
+                .and("_id.employeeId").as("employeeId")
+                .and("_id.orderId").as("orderId")
+                .and(
+                        ArithmeticOperators.Divide.valueOf(
+                                ArithmeticOperators.Subtract.valueOf("deliveredDate")
+                                        .subtract("pendingDate")
+                        ).divideBy(1000 * 60)
+                ).as("attentionTime")
+                .and("deliveredDate").as("deliveredDate");
+
+        // 5️⃣ Sort por pedidos más recientes
+        SortOperation sortByRecentOrders =
+                sort(Sort.Direction.DESC, "deliveredDate");
+
+        // 6️⃣ Group por empleado
+        GroupOperation groupByEmployee = group("employeeId")
+                .push(
+                        new BasicDBObject("orderId", "$orderId")
+                                .append("attentionTime",
+                                        new BasicDBObject("$round", List.of("$attentionTime", 2)))
+                ).as("orders");
+
+        // 7️⃣ Limitar cantidad de pedidos
+        ProjectionOperation limitOrders = project()
+                .and("_id").as("employeeId")
+                .and(
+                        ArrayOperators.Slice.sliceArrayOf("orders")
+                                .itemCount(cantidadPedidos)
+                ).as("orders");
+
+        // 8️⃣ Calcular promedio
+        AddFieldsOperation calculateAverage = addFields()
+                .addField("averageTime")
+                .withValue(
+                        new BasicDBObject("$round",
+                                List.of(new BasicDBObject("$avg", "$orders.attentionTime"), 2))
+                )
+                .build();
+
+        // 9️⃣ Sort por mejor promedio
+        SortOperation sortByAverage =
+                sort(Sort.Direction.ASC, "averageTime");
+
+        Aggregation aggregation = Aggregation.newAggregation(
+                matchStates,
+                groupByOrderAndEmployee,
+                validOrders,
+                calculateAttentionTime,
+                sortByRecentOrders,
+                groupByEmployee,
+                limitOrders,
+                calculateAverage,
+                sortByAverage
+        );
+
+        List<EmployeeRankingDTO> results =
+                mongoTemplate.aggregate(
+                        aggregation,
+                        "traceability_logs",
+                        EmployeeRankingDTO.class
+                ).getMappedResults();
+
+        // Ranking en Java
+        AtomicInteger rank = new AtomicInteger(1);
+
+        return results.stream()
+                .map(r -> new EmployeeRankingDTO(
+                        r.employeeId(),
+                        rank.getAndIncrement(),
+                        r.averageTime(),
+                        r.orders()
+                ))
+                .toList();
+        }
 }
